--- a/style.css
+++ b/style.css
@@ -51,15 +51,32 @@ section {
 section h2 {
     color: black;
 }
+
 .principal {
-    background-image:  url(/Prototipo/recursos/background.png);
-
-}
-
-.texto p{
+    position: relative;
     text-align: center;
-    font-size: 50px;
+    color: black
+    
+}
+.bottom-right {
+    position: absolute;
+    bottom: 10px;
+    right: 16px;
+    font-size: 30px;
+    width: 900px;
+  height: 400px;
+  border: 1px solid rgb(232, 238, 151);
+  background-color: rgb(232, 238, 151);
+  
 
+  
+  }
+
+
+.texto {
+    text-align: center;
+    font-size: 30px;
+    color: gray;
 }
 
 .card {
@@ -82,11 +99,6 @@ section h2 {
     font-size: 30px;
     margin: 20px 20;
     text-align: right;
-}
-
-.price {
-    font-size: 18px;
-    color: black;
 }
 
 .subtitulo{
@@ -125,22 +137,27 @@ section h2 {
 
 }
 
-.product .price span{
+.price {
+    font-size: 18px;
+    color: black;
     background-color: lightgray;
     border: 1px solid #ddd;
 
 }
-.product span{
+.previous_price{
+    font-size: 18px;
+    color: rgb(174, 170, 170);
     background-color: lightgray;
     border: 1px solid #ddd;
 
 }
+
 
 .show h2{
     color: #ccce56;
     font-size: 30px;
     margin: 20px 20;
-    text-align: center;
+
 
     border: 1px solid #ccce56;
 }
@@ -161,7 +178,4 @@ footer h1{
 }
 footer p{
     text-align: left;
-}
-.footermenu {
-
 }
